Basic centered layout.

--- a/index.html
+++ b/index.html
@@ -1,1 +1,50 @@
-Hello world
+<!DOCTYPE HTML>
+<html lang="en">
+    <head>
+        <style type="text/css">
+            .container {
+                /* Content */
+                display: flex;
+                align-items: center;
+                justify-content: center;
+                position: absolute;
+
+                /* Self */
+                top: 0;
+                bottom: 0;
+                right: 0;
+                left: 0;
+                padding:  0;
+                margin: 0;
+            }
+            .box {
+                display: flex;
+            }
+            .identity {
+                display: flex;
+                flex-flow: column wrap;
+                align-items: flex-end;
+                margin-right: .5em;
+            }
+            .title {
+                color: white;
+                background: black;
+                font-weight: bold;
+                padding: .1em 1em;
+            }
+        </style>
+    </head>
+    <body class="container">
+        <div class="box">
+            <div class="identity">
+                <div class="name">Jeff Mathew</div>
+                <div class="title">Contract Software Developer</div>
+                <div class="thing">jeff@jeffmathew.com</div>
+            </div>
+            <div class="skills">
+                <div class="skill">React Native Mobile Apps</div>
+                <div class="skill">.NET Core APIs</div>
+            </div>
+        </div>
+    </body>
+</html>
