--- a/index.html
+++ b/index.html
@@ -24,13 +24,22 @@
                 display: flex;
                 flex-flow: column wrap;
                 align-items: flex-end;
-                margin-right: .5em;
+                margin-right: 1em;
             }
             .title {
-                color: white;
-                background: black;
-                font-weight: bold;
-                padding: .1em 1em;
+                padding-bottom: .1em;
+                font-style: italic;
+                white-space: nowrap;
+            }
+            .name {
+                font-size: 3em;
+            }
+            .blurb {
+                display: flex;
+                flex-flow: column nowrap;
+                justify-content: center;
+                font-size: 1.5em;
+                width: 300px;
             }
         </style>
     </head>
@@ -39,11 +48,10 @@
             <div class="identity">
                 <div class="name">Jeff Mathew</div>
                 <div class="title">Contract Software Developer</div>
-                <div class="thing">jeff@jeffmathew.com</div>
+                <div class="thing"><a href="mailto:jeff@jeffmathew.com">jeff@jeffmathew.com</a></div>
             </div>
-            <div class="skills">
-                <div class="skill">React Native Mobile Apps</div>
-                <div class="skill">.NET Core APIs</div>
+            <div class="blurb">
+                <div>A full stack developer building dynamic apps and websites powered by reusable APIs in DC, Maryland.</div>
             </div>
         </div>
     </body>
