--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
+        <link href="https://fonts.googleapis.com/css?family=Cormorant:300&display=swap" rel="stylesheet">
         <style type="text/css">
             .container {
                 /* Content */
@@ -16,6 +17,8 @@
                 left: 0;
                 padding:  0;
                 margin: 0;
+
+                font-family: 'Cormorant', serif;
             }
             .box {
                 display: flex;
