--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
                 <div class="thing"><a class="link" href="mailto:jeff@jeffmathew.com" target="_blank">jeff@jeffmathew.com</a></div>
             </div>
             <div class="blurb">
-                <div>Full stack developer building <b class="quality-highlight">dynamic</b> <b class="build-highlight">apps</b> and <b class="build-highlight">websites</b> powered by <b class="quality-highlight">reusable</b> <b class="build-highlight">APIs</b> in DC, Maryland.</div>
+                <div>Full stack developer building <b class="quality-highlight">dynamic</b> <b class="build-highlight">apps</b> and <b class="build-highlight">websites</b> powered by <b class="quality-highlight">reusable</b> <b class="build-highlight">APIs</b>.</div>
             </div>
         </div>
     </body>
