Remove unused. Change bg.

--- a/index.html
+++ b/index.html
@@ -7,11 +7,13 @@
             body {
                 --blurb-font: 'Alegreya Sans SC', serif;
                 --title-font: 'EB Garamond', serif;
+                
                 --quality-highlight: #F23043;
                 --build-highlight: #120049;
-                --background-color: #FFFBFC;
+                --background-color: #f8f9e6;
+
                 --default-text-color: #141204;
-                --card-color: #FFFBFC;
+
                 --link-color: #2CA8DD;
 
                 background-color: var(--background-color);
@@ -35,7 +37,6 @@
             }
             .box {
                 display: flex;
-                background-color: var(--card-color);
             }
             .identity {
                 display: flex;
