Removed shortcut icon. Sorta. Slim font choice.

--- a/index.html
+++ b/index.html
@@ -1,8 +1,8 @@
 <!DOCTYPE HTML>
 <html lang="en">
     <head>
-        <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:300|Amiko|EB+Garamond|Lato:300|Open+Sans:300|Rasa&display=swap" rel="stylesheet">
-
+        <link rel="shortcut icon" href="about:blank">
+        <link href="https://fonts.googleapis.com/css?family=Alegreya+Sans+SC:300|EB+Garamond&display=swap" rel="stylesheet">
         <style type="text/css">
             body {
                 --blurb-font: 'Alegreya Sans SC', serif;
